--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@reduxjs/toolkit": "^1.9.7",
     "antd": "^5.9.4",
     "axios": "^1.5.1",
+    "firebase-tools": "^13.2.1",
     "i": "^0.3.7",
     "lodash": "^4.17.21",
     "npm": "^10.2.0",
