--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "firebase-tools": "^13.2.1",
     "i": "^0.3.7",
     "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "npm": "^10.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-facebook-pixel": "^1.0.4",
     "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.51.0",
     "react-input-mask": "^2.0.4",
     "react-intersection-observer": "^9.5.2",
     "react-lazy-load-image-component": "^1.6.0",
